    - setfps: set FPS cap at runtime, in case you want slow motion or speed-up.
    - fix/population-cap: run after every migrant wave to prevent exceeding the cap.
    - fix/stable-temp: counts items with temperature updates; does instant one-shot stable-temp.
    - fix/loyaltycascade: fix units allegiance, eg after ordering a dwarf merchant kill.
    - digfort: designate areas to dig from a csv file.
    - drainaquifer: remove aquifers from the map.
    - growcrops: cheat to make farm crops instantly grow.
    - magmasource: continuously spawn magma from any map tile.
    - removebadthoughts: delete all negative thoughts from your dwarves.
    - slayrace: instakill all units of a given race, optionally with magma.
    - superdwarf: per-creature fastdwarf.
  New GUI scripts:
    - gui/mechanisms: browse mechanism links of the current building.
    - gui/room-list: browse other rooms owned by the unit when assigning one.
    - gui/liquids: a GUI front-end for the liquids plugin.
    - gui/rename: renaming stockpiles, workshops and units via an in-game dialog.
    - gui/power-meter: front-end for the Power Meter plugin.
    - gui/siege-engine: front-end for the Siege Engine plugin.
  Autolabor plugin:
    - can set nonidle hauler percentage.
    - broker excluded from all labors when needed at depot.
    - likewise, anybody with a scheduled diplomat meeting.
  New Dwarf Manipulator plugin:
    Open the unit list, and press 'l' to access a Dwarf Therapist like UI in the game.
  New Steam Engine plugin:
    Dwarven Water Reactors don't make any sense whatsoever and cause lag, so this may be
    a replacement for those concerned by it. The plugin detects if a workshop with a
    certain name is in the raws used by the current world, and provides the necessary
    behavior. See hack/raw/*_steam_engine.txt for the necessary raw definitions.
    Note: Stuff like animal treadmills might be more period, but absolutely can't be
    done with tools dfhack has access to.